--- a/desktop/package.json
+++ b/desktop/package.json
@@ -2,7 +2,7 @@
   "name": "3d-asset-manager-desktop",
   "version": "1.0.0",
   "description": "Desktop application for managing and previewing local 3D assets",
-  "main": "dist-electron/main.js",
+  "main": "dist-electron/main.cjs",
   "type": "module",
   "scripts": {
     "dev": "node scripts/dev.mjs",
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.16",
     "electron": "^28.1.0",
     "electron-builder": "^24.9.1",
+    "electron-rebuild": "^3.2.9",
     "esbuild": "^0.27.0",
     "postcss": "^8.4.33",
     "svelte": "^4.2.8",
