--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "3d-asset-manager-desktop",
+  "name": "forma-desktop",
   "version": "1.0.0",
-  "description": "Desktop application for managing and previewing local 3D assets",
+  "description": "Forma - Desktop application for managing and previewing local 3D assets",
   "main": "dist-electron/main.cjs",
   "type": "module",
   "scripts": {
@@ -37,8 +37,8 @@
     "vite-plugin-electron-renderer": "^0.14.5"
   },
   "build": {
-    "appId": "com.3dassetmanager.desktop",
-    "productName": "3D Asset Manager",
+    "appId": "com.forma.desktop",
+    "productName": "Forma",
     "directories": {
       "output": "release"
     },
