Refactor code structure for improved readability and maintainability

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -52,7 +52,9 @@
         "nsis",
         "portable"
       ],
-      "icon": "resources/icon.ico"
+      "icon": "resources/icon.ico",
+      "sign": false,
+      "verifyUpdateCodeSignature": false
     },
     "nsis": {
       "oneClick": false,
