feat: add support for additional resources and update icon handling for cross-platform compatibility

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -51,7 +51,15 @@
     "files": [
       "dist/**/*",
       "dist-electron/**/*",
-      "package.json"
+      "package.json",
+      "resources/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "resources",
+        "to": "resources",
+        "filter": ["**/*"]
+      }
     ],
     "win": {
       "target": [
