fix: remove unnecessary resource files from package.json

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -51,8 +51,7 @@
     "files": [
       "dist/**/*",
       "dist-electron/**/*",
-      "package.json",
-      "resources/**/*"
+      "package.json"
     ],
     "extraResources": [
       {
