--- a/desktop/package.json
+++ b/desktop/package.json
@@ -31,9 +31,10 @@
     "@types/node": "^20.10.6",
     "autoprefixer": "^10.4.16",
     "electron": "^28.1.0",
-    "electron-builder": "^24.9.1",
+    "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
     "esbuild": "^0.27.0",
+    "png-to-ico": "^3.0.1",
     "postcss": "^8.4.33",
     "svelte": "^4.2.8",
     "tailwindcss": "^3.4.1",
@@ -43,6 +44,7 @@
     "vite-plugin-electron-renderer": "^0.14.5"
   },
   "build": {
+    "icon": "resources/icon.ico",
     "appId": "com.forma.desktop",
     "productName": "Forma",
     "directories": {
@@ -53,21 +55,23 @@
       "dist-electron/**/*",
       "package.json"
     ],
+    "asarUnpack": [
+      "!**/node_modules/fsevents/**"
+    ],
     "extraResources": [
       {
         "from": "resources",
         "to": "resources",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
       "target": [
         "nsis",
         "portable"
-      ],
-      "icon": "resources/icon.ico",
-      "signAndEditExecutable": false,
-      "signDlls": false
+      ]
     },
     "nsis": {
       "oneClick": false,
