--- a/desktop/package.json
+++ b/desktop/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/MarkKatsDesign/3d-asset-manager.git"
   },
-  "main": "dist-electron/main.cjs",
+  "main": "dist-electron/main/main.js",
   "type": "module",
   "scripts": {
     "dev": "node scripts/dev.mjs",
