--- a/desktop/package.json
+++ b/desktop/package.json
@@ -2,8 +2,8 @@
   "name": "forma-desktop",
   "version": "1.0.0",
   "description": "Forma - Desktop application for managing and previewing local 3D assets",
-  "author": "Mark Kats markkats94@gmail.com>",
-  "license": "MIT",
+  "author": "Mark Kats <markkats94@gmail.com>",
+  "license": "GPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/MarkKatsDesign/3d-asset-manager.git"
